force-app/main/default/objects/ProjetoCliente__c/ProjetoCliente__c.object-meta.xml
<CustomObject>
    <label>Projeto do Cliente</label>
    <nameField>
        <displayFormat>PRJ-{0000}</displayFormat>
        <label>Projeto do Cliente Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Projetos do Cliente</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>