force-app/main/default/objects/ProjetoCliente__c/fields/Ambiente__c.field-meta.xml
<CustomField>
    <fullName>Ambiente__c</fullName>
    <label>Ambiente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Desenvolvimento</fullName>
            </value>
            <value>
                <fullName>Homologação</fullName>
            </value>
            <value>
                <fullName>Produção</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>