force-app/main/default/objects/ProjetoCliente__c/fields/Arquiteto_Responsavel__c.field-meta.xml
<CustomField>
    <fullName>Arquiteto_Responsavel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Arquiteto Responsável</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ProjetosArquiteto</relationshipName>
    <type>Lookup</type>
</CustomField>