force-app/main/default/objects/ProjetoCliente__c/fields/Categoria__c.field-meta.xml
<CustomField>
    <fullName>Categoria__c</fullName>
    <label>Categoria</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Tipo_de_Projeto__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CRM</fullName>
            </value>
            <value>
                <fullName>Atendimento</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Integração</fullName>
            </value>
            <value>
                <fullName>Treinamento</fullName>
            </value>
            <value>
                <fullName>Suporte</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>