force-app/main/default/objects/ProjetoCliente__c/fields/Data_da_Proposta__c.field-meta.xml
<CustomField>
    <fullName>Data_da_Proposta__c</fullName>
    <label>Data da Proposta</label>
    <type>Date</type>
</CustomField>