force-app/main/default/objects/ProjetoCliente__c/fields/Data_Prevista_Implantacao__c.field-meta.xml
<CustomField>
    <fullName>Data_Prevista_Implantacao__c</fullName>
    <label>Data Prevista de Implantação</label>
    <type>Date</type>
</CustomField>