force-app/main/default/objects/ProjetoCliente__c/fields/Horas_de_Trabalho__c.field-meta.xml
<CustomField>
    <fullName>Horas_de_Trabalho__c</fullName>
    <label>Horas de Trabalho</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>