force-app/main/default/objects/ProjetoCliente__c/fields/Horas_Estimadas__c.field-meta.xml
<CustomField>
    <fullName>Horas_Estimadas__c</fullName>
    <label>Horas Estimadas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>