force-app/main/default/objects/ProjetoCliente__c/fields/Nome_do_Projeto__c.field-meta.xml
<CustomField>
    <fullName>Nome_do_Projeto__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Nome do Projeto</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>