force-app/main/default/objects/ProjetoCliente__c/fields/ProbabilidadeFechamento__c.field-meta.xml
<CustomField>
    <fullName>ProbabilidadeFechamento__c</fullName>
    <label>Probabilidade de Fechamento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>