force-app/main/default/objects/ProjetoCliente__c/fields/Quantidade_de_Tickets__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_de_Tickets__c</fullName>
    <label>Quantidade de Tickets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>