force-app/main/default/objects/ProjetoCliente__c/fields/Responsavel_Comercial__c.field-meta.xml
<CustomField>
    <fullName>Responsavel_Comercial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsável Comercial</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ProjetosCliente</relationshipName>
    <type>Lookup</type>
</CustomField>