force-app/main/default/objects/ProjetoCliente__c/fields/Tipo_de_Projeto__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Projeto__c</fullName>
    <label>Tipo de Projeto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Implantação</fullName>
            </value>
            <value>
                <fullName>Consultoria</fullName>
            </value>
            <value>
                <fullName>Sustentação</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>