force-app/main/default/objects/ProjetoCliente__c/fields/Valor_do_Projeto__c.field-meta.xml
<CustomField>
    <fullName>Valor_do_Projeto__c</fullName>
    <label>Valor do Projeto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>