force-app/main/default/objects/ProjetoCliente__c/recordTypes/Consultoria.recordType-meta.xml
<RecordType>
    <fullName>Consultoria</fullName>
    <active>true</active>
    <label>Consultoria</label>
</RecordType>