force-app/main/default/objects/ProjetoCliente__c/recordTypes/Projeto_Comercial.recordType-meta.xml
<RecordType>
    <fullName>Projeto_Comercial</fullName>
    <active>true</active>
    <label>Projeto Comercial</label>
</RecordType>