force-app/main/default/objects/ProjetoCliente__c/recordTypes/Projeto_Tecnico.recordType-meta.xml
<RecordType>
    <fullName>Projeto_Tecnico</fullName>
    <active>true</active>
    <label>Projeto Técnico</label>
</RecordType>