force-app/main/default/objects/ProjetoCliente__c/recordTypes/Sustentacao.recordType-meta.xml
<RecordType>
    <fullName>Sustentacao</fullName>
    <active>true</active>
    <label>Sustentação</label>
</RecordType>